--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>myBatisPlus</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>myBatisPlus_ActicityRecord</module>
+    </modules>
 
 
 </project>
